Добавил версионирование в API спецификацию и изменил роуты
